--- a/src/styles/sections/_about.scss
+++ b/src/styles/sections/_about.scss
@@ -98,8 +98,8 @@
 
     .mobile {
         display: none;
-        font-size: min(7.25em, 30vw);
-        font-weight: 500;
+        font-size: min(8.25em, 32vw);
+        font-weight: 400;
         text-align: center;
         border-bottom: 1px solid $dark-80;
 
