--- a/src/styles/sections/_main.scss
+++ b/src/styles/sections/_main.scss
@@ -15,7 +15,7 @@
         background-size: cover;
         background-position-y: 20%;
         width: 100%;
-        min-height: 35em;
+        min-height: 40em;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -26,34 +26,34 @@
             line-height: 1.875rem;
 
             @include mq(small) {
-                font-size: 1em;
-                line-height: 1.3125rem;
+                font-size: 1.25em;
+                line-height: 1.7rem;
             }
         }
 
         @include mq(small) {
             padding: 2em $sections-padding-x-small;
-            background-position-x: 10%;
         }
     }
 
     section {
-        padding: 3.37em $sections-padding-x;
+        padding: 0 $sections-padding-x;
         color: $light-90;
-        min-height: 29em;
+        min-height: calc(100vh - 35em);
         background-color: $dark-100;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         gap: 1em;
 
         h1 {
             text-transform: uppercase;
-            font-size: 4.625rem;
-            letter-spacing: -0.32375rem;
-            font-weight: 500;
+            font-size: 5rem;
+            letter-spacing: -0.1375rem;
+            font-weight: 400;
 
             @include mq(small) {
-                font-size: 2.56em;
+                font-size: 3em;
                 letter-spacing: -0.0179em;
                 line-height: 94%;
             }
