--- a/src/styles/sections/_portfolio.scss
+++ b/src/styles/sections/_portfolio.scss
@@ -19,13 +19,14 @@
             font-size: 3.75em;
             font-weight: 500;
             letter-spacing: -0.04em;
+            line-height: 1.25em;
 
             &:last-child {
                 color: $accent-purple;
             }
 
             @include mq(small) {
-                font-size: 1.375em;
+                font-size: 1.75em;
             }
         }
 
@@ -40,12 +41,14 @@
         p {
             color: $light-90;
             text-transform: uppercase;
-            font-size: 4.375em;
-            font-weight: 500;
-            letter-spacing: -0.04em;
+            font-weight: 400;
+            font-size: 5rem;
+            letter-spacing: -0.1375rem;
 
             @include mq(small) {
-                font-size: 1.875em;
+                font-size: 3em;
+                letter-spacing: -0.0179em;
+                line-height: 94%;
             }
         }
 
@@ -75,6 +78,7 @@
             background: url("../assets/main-bg.jpg"), lightgray no-repeat;
             background-position-x: 80%;
             background-position-y: 70%;
+            border-right: 1px solid $dark-100;
             // min-height: 70rem;
 
             img {
@@ -117,7 +121,7 @@
                 gap: 2em;
                 aspect-ratio: 1/1.6;
                 width: 80%;
-                height: 80%;
+                height: 75%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
